@@ -222,6 +222,8 @@ If upgrading from an older release, see the file UPGRADING.
 * Show "block" link in Special:Recentchanges for logged in users, too, if
   wgUserSysopBans is true.
 * (bug 1326) Use content language for '1movedto2' in edit history
+* zh: Fix warning when HTTP_ACCEPT_LANGUAGE is not set
+* zh: Fix double conversion for zh-sg and zh-hk
 
 === Caveats ===
 
